--- a/index.html
+++ b/index.html
@@ -9,159 +9,163 @@
 
 </head>
 <body>
-<header>Trivia Time</header>
 
-<div class="container">
-    <div id="question1">????</div>
+        <div class="container">
+            
+    <header>Trivia Time</header>
+
+    <div id="question1">How many rows does the average ear of corn have?
+    </div>
     <div id="answers1">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      yes
+      13
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      no
+      10
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      maybe
+      7
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      never
+      16
     </label>
     </div>
-    <div id="question2">????</div>
+    <div id="question2">Ortharexia Nervosa is an eating disorder where the sufferer is obsessed with eating what?
+    </div>
     <div id="answers2">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      yes
+      Chicken Bones
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      no
+      Uncooked Pasta
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      maybe
+      Pig Feet
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      never
+      Healthy Food
     </label>
     </div>
-    <div id="question3">????</div>
+    <div id="question3">A pearl will dissolved if placed in this substance.</div>
     <div id="answers3">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      yes
+     Vinegar
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      no
+     Bleach
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      maybe
+      Orange Juice
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      never
+      Wine
     </label>
    </div>
-    <div id="question4">????</div>
+    <div id="question4">In Kentucky it is illegal to carry this in your back pocket.</div>
     <div id="answers4">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      yes
+      Pretzels
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      no
+      Ice Cream Cone
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      maybe
+      Bubblegum 
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      never
+      Peach Pits
     </label>
     </div>
-    <div id="question5">????</div>
+    <div id="question5">Which month is national pasta month?</div>
     <div id="answers5">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      yes
+      December
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      no
+      June
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      maybe
+      March
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      never
+      October
     </label>
     </div>
-    <div id="question6">????</div>
+    <div id="question6"> What is the least favorite pizza topping in America?</div>
     <div id="answers6">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      yes
+      Pineapple
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      no
+      Peas
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      maybe
+      Anchovies
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      never
+      Sausage
     </label>
     </div>
-    <div id="question7">????</div>
+    <div id="question7">There is a part of the human brain used specifically for detecting this smell.</div>
     <div id="answers7">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      yes
+      Burning Toast
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      no
+      Baking Bread
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      maybe
+      Garlic
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      never
+      Fried Chicken
     </label>
 </div>
-    <div id="question8">????</div>
+    <div id="question8">What was margarine clled when it was first introduced in England</div>
     <div id="answers8">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      yes
+      Marge
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      no
+      Move Over Butter
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      maybe
+      Butterine
     </label>
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     <label class="form-check-label" for="exampleRadios1">
-      never
+      Oleo
     </label>
 </div>
 </div>
